--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
